<resources>
    <string name="app_name">Levect</string>
    <string name="collect">Collection</string>
    <string name="share">Share</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_already">Subscribed</string>
    <string name="detail">Detail</string>
    <string name="my_collection">My Collection</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="myfavorite_no_favorite">Empty</string>
    <string name="settings_clear_cache">Clear Cache</string>
    <string name="check_update">Check Update</string>
    <string name="about_us">About us</string>
    <string name="settings_not_need_update">Already the Latest Version!</string>
    <string name="app_copyright">Copyright ©️ %d Haokan. All rights reserved.</string>
    <string name="dialog_positive">Yes</string>
    <string name="toast_download_success">Download succeeded!</string>
    <string name="toast_download_fail">Download failed!</string>
    <string name="toast_net_error">Network Error</string>
    <string name="toast_copy_link">Has been copied to the clipboard.</string>
    <string name="toast_sd_unavailable">External storage is not available, please check if the SD card is properly installed.</string>
    <string name="gridimg_no_more">No More</string>
    <string name="gridimg_loading">Loading…</string>
    <string name="no_image">No relevant pictures</string>
    <string name="more">More</string>
    <string name="share_weixin">WeChat friends</string>
    <string name="share_qq">QQ friends</string>
    <string name="share_circle">Moments</string>
    <string name="share_sina">Sina blog</string>
    <string name="share_qqzone">QQ Zone</string>
    <string name="share_tumblr">Tumblr</string>
    <string name="share_instagram">Instagram</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_twitter">Twitter</string>
    <string name="share_pinterest">Pinterest</string>
    <string name="update_later">Update later on</string>
    <string name="update_now">Update right now</string>
    <string name="config_close">Confirm</string>
    <string name="wifi_close_des">After the closure will not automatically update the lock screen every day, sure to close it?</string>
    <string name="content_recomm_des">When the lock screen is updated, you will only update the subscribed content and do not get what we recommend for you</string>
    <string name="think_agin">Cancel</string>
    <string name="set_as_desktop">Set as desktop</string>
    <string name="set_delete_image">Delete Image</string>
    <string name="set_to_the_desktop_success">Set as the desktop successfully</string>
    <string name="set_to_the_desktop_fail">Set as the desktop unsuccessfully</string>
    <string name="set_as_wallpaper">Set as lock screen</string>
    <string name="set_as_wallpaper_success">Set as lock screen successfully</string>
    <string name="set_as_wallpaper_fail">Set as wallpaper unsuccessfully</string>
    <string name="share_success">Success</string>
    <string name="share_fail">Fail</string>
    <string name="share_cancel">Cancel</string>
    <string name="dialog_title">TIPS</string>
    <string name="dialog_check_txt">Cancel lock at the same time</string>
    <string name="go_setting">Go Setting</string>
    <string name="accessibility">Accessibility</string>
    <string name="got_it">Got it</string>
    <string name="off_line">Off-line</string>
    <string name="network_to_load_more">Networking to get more content</string>
    <string name="do_not_remind">No longer remind</string>
    <string name="accessSDCard">Please in Permissions administration of Levect of Manage apps of Settings, Open the storage permission to display and store the picture correctly.</string>
    <string name="access_location_permission">Please in Permissions administration of Levect of Manage apps of Settings, Open the location permission，Levect will to you recommend based on the location of the contents.</string>
    <string name="dislike">Dislike</string>
    <string name="name_id_error">Name or id error</string>
    <string name="url_error">Url error</string>
    <string name="collection_img">Pictures</string>
    <string name="tag">Tags</string>
    <string name="collection_cp">Content providers</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_complete">Clear complete</string>
    <string name="cancel_collect">Cancel collect</string>
    <string name="already_lastpage">Already the last one</string>
    <string name="close">Close</string>
    <string name="refresh">Change</string>
    <string name="copy_link">Share</string>
    <string name="open_with_browse">Open with browse</string>
    <string name="mainpage">Home Page</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="magazine">Magazines</string>
    <string name="send">Send</string>
    <string name="qq">QQ</string>
    <string name="save">Save</string>
    <string name="zutu_size">%1$s  </string>
    <string name="like_num">%1$s liked</string>
    <string name="dantu_labey">＃%1$s＃</string>
    <string name="follow">＋ Follow</string>
    <string name="already_follow">Followed</string>
    <string name="message">Message</string>
    <string name="myfollow">Fllow</string>
    <string name="reply">Reply</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="no_message">No message</string>
    <string name="cancel_already">Cancelled</string>
    <string name="weixin">WeChat</string>
    <string name="pengyouquan">Moments</string>
    <string name="weibo">Weibo</string>
    <string name="unbound">Unbound</string>
    <string name="refresh_tags">Change</string>
    <string name="relevant_tags">Relevant tags</string>
    <string name="no_collection">No collection</string>
    <string name="simple_date_format">MM.dd HH:mm</string>
    <string name="other">Others</string>
    <string name="enter_correct_verification">Please enter the correct verification code</string>
    <string name="no_install_weixin">You haven\'t installed WeChat</string>
    <string name="no_install_qq">You haven\'t installed QQ</string>
    <string name="no_install_facebook">You haven\'t installed Facebook</string>
    <string name="no_install_twitter">You haven\'t installed Twitter</string>
    <string name="no_install_instagram">You haven\'t installed Instagram</string>
    <string name="no_install_pinterest">You haven\'t installed Pinterest</string>
    <string name="no_install_tumblr">You haven\'t installed Tumblr</string>
    <string name="save_success">Save succeed</string>
    <string name="no_permission">You was not granted the storage permissions, it will affect your normal use!</string>
    <string name="no_permission_apk">You was not granted the storage permissions and not able to download the new version!</string>
    <string name="count_find_cp">Can\'t find the CP</string>
    <string name="count_find_tag">Can\'t find the tag</string>
    <string name="count_find_group">Can\'t find the group</string>
    <string name="fail">Fail</string>
    <string name="upload_failed">Upload failed</string>
    <string name="picture_off_line">Picture has been off the shelves</string>
    <string name="subscribe_success">Subscribe successfully</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="begin_download_place_later">Start to download, please wait a moment</string>
    <string name="server_fail">Access to the server fail</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Delete succeed</string>
    <string name="delete_fail">Delete failed</string>
    <string name="servercode_unknown">Server error, code:</string>
    <string name="servercode_1001">Registration failed, code: 1001</string>
    <string name="servercode_1002">Registration failed, code: 1002</string>
    <string name="servercode_1003">Verification code error</string>
    <string name="servercode_1011">Login failed, code: 1011</string>
    <string name="servercode_1012">Phone number not registered</string>
    <string name="servercode_1013">Phone number error</string>
    <string name="servercode_1014">Password error</string>
    <string name="servercode_1015">Login failed, code: 1015</string>
    <string name="servercode_1021">Update password failed, code: 1021</string>
    <string name="servercode_1022">Phone number error</string>
    <string name="servercode_1023">Old and new password not the same</string>
    <string name="servercode_1024">Verification code error</string>
    <string name="servercode_1025">Update password success, login failed, code: 1025</string>
    <string name="servercode_1031">Avatar setting failed, place try again, code:1031</string>
    <string name="servercode_1032">Avatar setting failed, place try again, code:1032</string>
    <string name="servercode_1033">Avatar setting failed, place try again, code:1033</string>
    <string name="servercode_1034">Information update failed, code: 1034</string>
    <string name="servercode_1035">Nickname cannot be empty</string>
    <string name="servercode_1036">Nickname already occupied</string>
    <string name="servercode_1037">Information update failed, code: 1037</string>
    <string name="servercode_1038">Information update failed, code: 1038</string>
    <string name="servercode_1041">Phone number already registered</string>
    <string name="servercode_1042">Phone number not registered</string>
    <string name="servercode_1043">At least one minute interval of recapturing verification code</string>
    <string name="servercode_1044">Verification code failed, code: 1044</string>
    <string name="servercode_1045">Verification code failed, code: 1045</string>
    <string name="servercode_1046">Verification code failed, code: 1046</string>
    <string name="servercode_1051">Login failed, code: 1051</string>
    <string name="servercode_1052">Does not support the login method</string>
    <string name="servercode_1053">Authorization failed</string>
    <string name="servercode_1054">Login failed, code: 1054</string>
    <string name="servercode_1055">Login failed, code: 1055</string>
    <string name="servercode_1056">Login failed, code: 1056</string>
    <string name="servercode_1057">Login failed, code: 1057</string>
    <string name="servercode_1061">Unbundling failed, code: 1061</string>
    <string name="servercode_1062">Account unbound</string>
    <string name="servercode_1063">Keep at least one</string>
    <string name="servercode_1064">Unbundling failed, code: 1064</string>
    <string name="servercode_1065">Unbundling failed, code: 1065</string>
    <string name="servercode_1071">Log out failed</string>
    <string name="servercode_1091">Verification code error</string>
    <string name="servercode_1081">Does not support the binding way</string>
    <string name="servercode_1082">Binding failed, code: 1082</string>
    <string name="servercode_1083">Verification code error</string>
    <string name="servercode_1084">Binding failed, code: 1084</string>
    <string name="servercode_1085">Account has been bound</string>
    <string name="servercode_1086">Binding failed, code: 1086</string>
    <string name="servercode_1087">Account has been bound</string>
    <string name="servercode_1088">Binding failed, code: 1088</string>
    <string name="servercode_2001">Get list failed, code: 2001</string>
    <string name="servercode_2011">Get reply list failed, code: 2011</string>
    <string name="servercode_2021">Comment failed, code: 2021</string>
    <string name="confirm">Confirm</string>
    <string name="lockimage">Lock Image</string>
    <string name="switch_dialog">        Now non WIFI, using mobile traffic?</string>
    <string name="save_to">Save to local</string>
</resources>