<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    >

    <TextView
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:textColor="#cfcfcf"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="52dp"/>

    <View
        android:id="@id/divider"
        android:background="@color/bai_20"
        android:layout_above="@id/cancel"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/divider"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/share_facebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_share_facebook"
            android:drawablePadding="9dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:text="@string/share_facebook"
            android:textColor="@color/bai"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/share_twitter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_share_twitter"
            android:drawablePadding="9dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/share_twitter"
            android:textColor="@color/bai"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/share_pinterest"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_share_pinterest"
            android:drawablePadding="9dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@id/share_twitter"
            android:text="@string/share_pinterest"
            android:textColor="@color/bai"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/share_instagram"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_share_instagram"
            android:drawablePadding="9dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:text="@string/share_instagram"
            android:textColor="@color/bai"
            android:textSize="11sp" />
    </LinearLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/share_tumblr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/icon_share_tumblr"
        android:drawablePadding="9dp"
        android:gravity="center"
        android:layout_above="@id/divider"
        android:layout_marginBottom="26dp"
        android:layout_centerHorizontal="true"
        android:text="@string/share_tumblr"
        android:textColor="@color/bai"
        android:textSize="11sp" />

    <TextView
        android:layout_marginLeft="24dp"
        android:layout_above="@id/ll1"
        android:layout_marginBottom="19dp"
        android:text="Share"
        android:textSize="13sp"
        android:textColor="#cfcfcf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RelativeLayout>