<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:fitsSystemWindows="true"
                android:layout_height="match_parent">
    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hei_50" />

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bai"
        android:layout_width="match_parent"
        android:layout_height="190dp">

        <TextView
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:textColor="#999999"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:background="@drawable/selector_click_f8f8f8"
            android:layout_width="match_parent"
            android:layout_height="46dp"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_set_lockscreen"
            android:layout_above="@id/cancel"
            android:layout_marginBottom="31dp"
            android:text="@string/set_as_wallpaper"
            android:textSize="12sp"
            android:textColor="#666666"
            android:drawablePadding="12dp"
            android:drawableTop="@drawable/icon_lock_more"
            android:layout_marginLeft="25dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_collect"
            android:layout_above="@id/cancel"
            android:layout_marginBottom="31dp"
            android:layout_toRightOf="@id/tv_set_lockscreen"
            android:text="@string/collect"
            android:textSize="12sp"
            android:textColor="#666666"
            android:drawablePadding="14dp"
            android:drawableTop="@drawable/selector_more_collect"
            android:layout_marginLeft="30dp"
            android:gravity="center_horizontal"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_dislike"
            android:layout_above="@id/cancel"
            android:layout_marginBottom="31dp"
            android:layout_toRightOf="@id/tv_collect"
            android:text="@string/dislike"
            android:textSize="12sp"
            android:textColor="#666666"
            android:drawablePadding="12dp"
            android:drawableTop="@drawable/icon_dislike"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/title"
            android:text="@string/more"
            android:textSize="15sp"
            android:textColor="@color/hei_40"
            android:layout_marginLeft="22dp"
            android:layout_above="@id/tv_collect"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</RelativeLayout>