<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="105dp"
                android:orientation="vertical"
                android:background="@drawable/icon_pop_collect"
                android:layout_height="wrap_content">
                <!--android:fitsSystemWindows="true"-->
    <TextView
        android:id="@+id/tv_imgs"
        android:text="@string/collection_img"
        android:textColor="@color/selector_click_666666"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="42dp"/>
    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#999999"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/tv_tags"
        android:text="@string/tag"
        android:textColor="@color/selector_click_666666"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="42dp"/>
    <View
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#999999"
        android:layout_width="match_parent"
        android:layout_height="1px"/>
    <TextView
        android:id="@+id/tv_cp"
        android:text="@string/collection_cp"
        android:textColor="@color/selector_click_666666"
        android:textSize="13sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="42dp"/>
</LinearLayout>