<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <View
            android:id="@+id/bgview"
            android:background="@color/hei_30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/rl_content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
                <TextView
                    android:id="@+id/lock_image"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_selector_bai"
                    android:text="@string/lockimage"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:gravity="center"
                    />

                <View
                    android:background="#e0e0e0"
                    android:layout_width="match_parent"
                    android:layout_height="1px"/>

                <TextView
                    android:id="@+id/delete_image"
                    android:layout_above="@id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_selector_bai"
                    android:text="@string/set_delete_image"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:gravity="center"
                    />
                <View
                    android:background="#e0e0e0"
                    android:layout_width="match_parent"
                    android:layout_height="1px"/>

                <TextView
                    android:id="@+id/set_wallpaper"
                    android:layout_above="@id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_selector_bai"
                    android:text="@string/set_as_desktop"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:gravity="center"
                    />


                <View
                    android:background="#d7d7d7"
                    android:layout_width="match_parent"
                    android:layout_height="1px"/>

                <TextView
                    android:id="@+id/save_img"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_selector_bai"
                    android:text="@string/save_to"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:gravity="center"
                    />

                <View
                    android:background="#e0e0e0"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"/>

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_selector_bai"
                    android:text="@string/cancel"
                    android:textColor="#666666"
                    android:textSize="16sp"
                    android:gravity="center"
                    />
        </LinearLayout>
</RelativeLayout>