<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="230dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/tv_update_dialog_tv_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_update_dialog_button"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_update_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#7f7f7f"
            android:textStyle="bold"
            android:textSize="16sp"
            tools:text="" />

        <TextView
            android:id="@+id/tv_update_dialog_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="85dp"
            android:padding="15dp"
            android:textColor="#7f7f7f"
            android:textSize="14sp"
            tools:text="" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/tv_update_dialog_tv_layout"
        android:background="#e6e6e6" />

    <LinearLayout
        android:id="@+id/ll_update_dialog_need_update"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/divider"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/update_later"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_updata_dialog_button_left"
            android:gravity="center"
            android:text="@string/update_later"
            android:textColor="#c0c0c0"
            android:textSize="16sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#e6e6e6" />

        <TextView
            android:id="@+id/update_now"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_updata_dialog_button_right"
            android:gravity="center"
            android:text="@string/update_now"
            android:textColor="#7f7f7f"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_update_dialog_not_need_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/divider"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/dialog_positive"
        android:textColor="@color/selector_click_a8a8a8"
        android:textSize="16sp"
        android:visibility="gone" />
</RelativeLayout>